# cis561

./: .gitignore  README.md
exams/final/study_guide/: cis561_final_study_guide.tex
exams/midterm/study_guide/: cis561_midterm_study_guide.tex
hw/: add_new_quack_file.sh  automate_script_copy.sh  build_testbench.sh  export_expected.sh  quack_compiler_testbench.sh  uniq
hw/code_generator/: ASTNode.cpp  ASTNode.h  CMakeLists.txt  README.md  builtins.c  builtins.cpp  builtins.h  code_gen_utils.h  code_generator.h  config  exceptions.h  keywords.h  quack.lxx  quack.yxx  quack_class.cpp  quack_class.h  quack_compiler.h  quack_field.h  quack_method.h  quack_param.cpp  quack_param.h  quack_program.h  symbol_table.h  type_checker.h
hw/demo/: all_tests.csv
hw/lexer/: ASTAssn.h  ASTNode.cpp  ASTNode.h  CMakeLists.txt  QClass.cpp  QClass.h  keywords.h  parser.cpp  quack.lxx  quack.yxx  sample.txt  sample2.txt
hw/lexer/qlang/: QClass.h
hw/parser/: AST.h  keywords.h
hw/parser/quack/: class.h  statement.h  variable.h
hw/project00/: .gitignore  CMakeLists.txt  README.md  build.sh  config  html_parser.h  main.cpp  project00.lxx  project00.yxx  test.txt  tree_node.h
hw/project01/: ASTNode.h  CMakeLists.txt  README.md  build.sh  config  main.cpp  quack.lxx
hw/project02/: ASTNode.h  CMakeLists.txt  Messages.cpp  QuackCompiler.h  README.md  class_example.txt  config  container_templates.h  keywords.h  main.cpp  names.h  quack.lxx  quack.yxx  quack_classes.cpp  quack_classes.h  quack_compiler.h  quack_field.h  quack_methods.h  quack_params.h  quack_program.h  quack_type_checker.h
hw/samples/: .gitignore  all_tests.csv  bad_method_field_duplicate.qk  bad_return_only_if_false.qk  bad_return_only_if_true.qk  builtins.c  good_return_both_if.qk  good_simple_int_math_and_bool.qk  good_simple_method_return_good.qk  good_simple_unary_negation.qk  good_simple_while_and_sugar.qk  good_typecase.qk
hw/samples/expected/: good_Pt.txt  good_simple_inherited_method.txt  good_simple_int_math_and_bool.txt  good_simple_unary_negation.txt  good_simple_while_and_sugar.txt  good_this_is_string.txt
hw/type_checker/: ASTNode.cpp  ASTNode.h  CMakeLists.txt  Messages.cpp  build.sh  compiler_utils.h  config  container_templates.h  exceptions.h  initialized_list.h  keywords.h  quack.lxx  quack.yxx  quack_class.cpp  quack_class.h  quack_classes.cpp  quack_classes.h  quack_compiler.h  quack_field.h  quack_method.h  quack_methods.h  quack_param.h  quack_params.h  quack_program.h  quack_type_checker.h  symbol_table.h  test_type_checker.sh  type_checker.h
report/: lazy_evaluation_haskell.tex  non_strict_semantics.tex
report/bib/: references.bib
